# trial-spoofer

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ROADMAP.md  TODO.md  commitlint.config.js  demo.py  justfile  linux_vscode_spoofer.py  main.py  pyproject.toml  run_input_demo.py
.github/workflows/: commitlint.yml
docs/: 01-Trial-Spoofer.md  FIXES_SUMMARY.md
scripts/: run_tests.py
src/: __main__.py  cli.py  demo.py  main.py  main_v2.py  run.py  tui.py
src/core/: __init__.py  app.py  command.py  config.py  helpers.py  spoof.py  spoofer.py  system.py
src/demos/: input_demo.py  input_features_demo.py  integration_example.py  layout_demo.py  progress_bar_demo.py  progress_demo.py  prompt_demo.py  table_demo.py  ui_demo.py
src/ui/: __init__.py  banner.py  input.py  layout.py  menu.py  message.py  panel.py  progress.py  progress_bar.py  table.py  tables.py
src/utils/: __init__.py  account.py  bootloader.py  check.py  cleaner.py  filesystem.py  helper.py  helpers.py  hostname.py  identifiers.py  mac.py  network.py  parser.py  spoofer.py  system.py
tests/: __init__.py  conftest.py  test_main.py
tests/test_core/: test_command.py  test_config.py  test_helpers.py
tests/test_integration/: test_cli.py
tests/test_ui/: __init__.py  test_input.py  test_table.py
utils/: filesystem.py  network.py  system.py
